--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-
 import Hero from '~/components/widgets/Hero.astro';
 import Note from '~/components/widgets/Note.astro';
 import Features from '~/components/widgets/Features.astro';
@@ -13,40 +12,34 @@ import Stats from '~/components/widgets/Stats.astro';
 import CallToAction from '~/components/widgets/CallToAction.astro';
 
 const metadata = {
-  title: 'AstroWind — Free template for creating websites with Astro + Tailwind CSS',
+  title: 'Central Illinois Helpdesk',
   ignoreTitleTemplate: true,
 };
 ---
 
 <Layout metadata={metadata}>
-  <!-- Hero Widget ******************* -->
 
   <Hero
     actions={[
       {
         variant: 'primary',
-        text: 'Get template',
-        href: 'https://github.com/onwidget/astrowind',
-        target: '_blank',
+        text: 'Learn More',
+        href: '#features',
+        target: '',
         icon: 'tabler:download',
       },
-      { text: 'Learn more', href: '#features' },
+      { text: 'Login', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/hero.png', alt: 'AstroWind Hero Image' }}
+    image={{ src: '~/assets/images/worker.svg', alt: 'Central Illinois Helpdesk', type: 'svg', width: '800px', height: '600px'}}
   >
     <Fragment slot="title">
-      Free template for <span class="hidden xl:inline">creating websites with</span>
-      <span class="text-accent dark:text-white highlight"> Astro 3.0</span> + Tailwind CSS
+      <span class="text-accent dark:text-white highlight">IT:</span> Simplified <span class="hidden xl:inline">for small businesses</span>
     </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">AstroWind</span> is a free, customizable and production-ready template for Astro 3.0
-        + Tailwind CSS.</span
-      >
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">AstroWind: Production-ready.</span>
-       Suitable for Startups, Small Business, SaaS websites, Professional Portfolios, Marketing websites, Landing Pages
-      & Blogs.
+        <span class="font-semibold">Central Illinois Helpdesk</span> is a full-service IT company, specially geared toward small businesses. 
+        <span class="hidden md:inline"> We offer a wide range of services ranging from traditional helpdesk email, chat, or in person support to full blown IT project management. </span>
     </Fragment>
   </Hero>
 
@@ -58,50 +51,48 @@ const metadata = {
 
   <Features
     id="features"
-    tagline="Features"
-    title="What you get with AstroWind"
-    subtitle="One of the most professional and comprehensive templates currently on the market. Most starred & forked Astro theme in 2022."
+    tagline="Why CI HElpdesk?"
+    title="Downtime is frustrating"
+    subtitle="Don't be stuck without tech support"
     items={[
       {
-        title: 'Astro + Tailwind CSS Integration',
+        title: 'IT Project Support',
         description:
-          'A seamless integration between two great frameworks that offer high productivity, performance and versatility.',
+          "IT Projects are tricky. We'll help you navigate the process. Requirements gathering, project management, and implementation.",
         icon: 'tabler:brand-tailwind',
       },
       {
-        title: 'Ready-to-use Components',
+        title: 'Helpdesk Support Simplified',
         description:
-          'Widgets made with Tailwind CSS ready to be used in Marketing Websites, SaaS, Blogs, Personal Profiles, Small Business...',
+          'IT issues are frustrating, a quick email, chat, or call and we will get you back to work.',
         icon: 'tabler:components',
       },
       {
-        title: 'Best Practices',
+        title: 'Security Management',
         description:
-          'Creating secure, efficient, and user-friendly websites that deliver exceptional experiences and lasting value.',
+          "Don't become a headline. We'll help keep your data safe, giving you peace of mind and ensuring your business's data is safe.",
         icon: 'tabler:list-check',
       },
       {
-        title: 'Excellent Page Speed',
+        title: 'Tier 1 and 2+ Support',
         description:
-          'Having a good page speed impacts organic search ranking, improves user experience (UI/UX) and increase conversion rates.',
+          'Printers, desktops, laptops, servers, and more. Issues happen, wasting time is not an option to when you need to keep your business going.',
         icon: 'tabler:rocket',
       },
       {
-        title: 'Search Engine Optimization (SEO)',
+        title: 'Custom Development',
         description:
-          "SEO lies in its ability to enhance a website's visibility, driving organic traffic and enabling it to reach a wider audience.",
+          "Your business is unique, we'll build custom solutions to help you get the most out of your technology investment and ensuring you're operating at peak efficiency.",
         icon: 'tabler:arrows-right-left',
       },
       {
-        title: 'Open to new ideas and contributions',
+        title: 'Cloud Services',
         description:
-          'Embracing a culture that is open to new ideas and contributions is integral fostering innovation, collaboration, and a dynamic user experience.',
+          "Your infrastracture is the core of your business. There is no reason to navigate this complex infrastructure alone. We'll help you navigate",
         icon: 'tabler:bulb',
       },
     ]}
   />
-
-  <!-- Content Widget **************** -->
 
   <Content
     isReversed
@@ -375,7 +366,6 @@ const metadata = {
   />
 
   <!-- CallToAction Widget *********** -->
-
   <CallToAction
     actions={[
       {
