content updates, copy added, pages need work still

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -17,6 +17,22 @@ import '@fontsource-variable/inter';
 // Oswald
 // 'Space Grotesk'
 // Urbanist
+    //   colors:
+    //     # primary: rgb(0 124 220)
+    //     primary: rgb(249, 115, 22)
+    //     # secondary: rgb(30 58 138)
+    //     secondary: rgb(194, 65, 12)
+    //     accent: rgb(109 40 217)
+    //     info: rgb(119 182 234)
+    // dark:
+    //   fonts: {}
+    //   colors:
+    //     # primary: rgb(29 78 216)
+    //     primary: rgb(243, 144, 54)
+    //     # secondary: rgb(30 58 138)
+    //     secondary: rgb(194, 65, 12)
+    //     accent: rgb(135 77 2267)
+    //     info: rgb(58 191 248)
 ---
 
 <style is:inline is:global>
@@ -24,16 +40,16 @@ import '@fontsource-variable/inter';
     --aw-font-sans: 'Inter Variable';
     --aw-font-serif: var(--aw-font-sans);
     --aw-font-heading: var(--aw-font-sans);
-
-    --aw-color-primary: rgb(30 64 175);
-    --aw-color-secondary: rgb(30 58 138);
-    --aw-color-accent: rgb(109 40 217);
-
+    /* --aw-color-primary: rgb(30 64 175); */
+    /* --aw-color-secondary: rgb(30 58 138); */
+    /* --aw-color-accent: rgb(109 40 217); */
+    --aw-color-primary: #f97316;
+    --aw-color-secondary: #c2410c;
+    --aw-color-accent: #3b82f6;
     --aw-color-text-heading: rgb(0 0 0); 
     --aw-color-text-default: rgb(16 16 16);
     --aw-color-text-muted: rgb(16 16 16 / 66%);
     --aw-color-bg-page: rgb(255 255 255);
-
     --aw-color-bg-page-dark: rgb(3 6 32);
   }
 
@@ -41,11 +57,10 @@ import '@fontsource-variable/inter';
     --aw-font-sans: 'Inter Variable';
     --aw-font-serif: var(--aw-font-sans);
     --aw-font-heading: var(--aw-font-sans);
-
-    --aw-color-primary: rgb(30 64 175);
-    --aw-color-secondary: rgb(30 58 138);
-    --aw-color-accent: rgb(109 40 217);
-
+    /* --aw-color-primary: rgb(30 64 175); */
+    /* --aw-color-secondary: rgb(30 58 138); */
+     /* --aw-color-accent: rgb(109 40 217); */
+    --aw-color-accent: #3b82f6;
     --aw-color-text-heading: rgb(0 0 0); 
     --aw-color-text-default: rgb(229 236 246);
     --aw-color-text-muted: rgb(229 236 246 / 66%);
