--- a/src/pages/tier1.astro
+++ b/src/pages/tier1.astro
@@ -24,16 +24,16 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Learn More',
+        text: 'What is Tier 1?',
         href: '#features',
         target: '',
         icon: 'line-md:chevron-double-down',
       },
-      { text: 'Login', href: '#features' },
+      // { text: 'Login', href: '#features' },
     ]}
-    image={{ src: '~/assets/images/worker.svg', alt: 'Central Illinois Helpdesk', type: 'svg', width: '800px', height: '600px'}}>
+    image={{ src: '~/assets/images/illustrations/itsupport.svg', alt: 'Central Illinois Helpdesk', type: 'svg', width: '800px', height: '600px'}}>
     <Fragment slot="title">
-      <span class="text-accent dark:text-white highlight">IT:</span> Simplified <span class="hidden xl:inline">for small businesses</span>
+      <span class="text-accent dark:text-white highlight">Tier 1:</span> Printeres to Passwords
     </Fragment>
 
     <Fragment slot="subtitle">
