--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,10 +1,10 @@
 ---
 import { SITE } from '~/utils/config';
 import Image from '~/components/common/Image.astro'
-import logo from '~/assets/CIHD-mark.png'
+import logo from '~/assets/CIHD-SVG.svg'
 ---
 
-<span class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white max-w-[80px]">
-  <Image src={logo} alt="CIHG Logo" class="hidden xl:inline-block" />
-  <span class="md:ml-4 hidden xl:inline">{SITE?.name}</span>
+<span class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white max-w-[120px]">
+  <Image src={logo} alt="CIHG Logo" class="inline-block" />
+  <span class="hidden text-sm lg:inline lg:text-xl">{SITE?.name}</span>
 </span>
