more initialization tweaks, go go

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const metadata = {
         target: '',
         icon: 'line-md:chevron-double-down',
       },
-      { text: 'Login', href: '#features' },
+      { text: 'Submit a Ticket', href: 'https://cihelpdesk.freshdesk.com/' },
     ]}
     image={{ src: '~/assets/images/worker.svg', alt: 'Central Illinois Helpdesk', type: 'svg', width: '800px', height: '600px'}}>
     <Fragment slot="title">
@@ -333,8 +333,8 @@ const metadata = {
     actions={[
       {
         variant: 'primary',
-        text: 'Sign Up Today',
-        href: '/signup/',
+        text: 'Submit your first ticket today',
+        href: 'https://cihelpdesk.freshdesk.com/',
         target: '_blank',
         icon: 'line-md:clipboard-to-clipboard-check-transition',
       },
