--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -115,7 +115,7 @@ const metadata = {
       callToAction: {
         target: '_blank',
         text: 'Get started',
-        href: '#',
+        href: 'https://cihelpdesk.freshdesk.com/#esssentials',
       },
     },
     {
@@ -144,7 +144,7 @@ const metadata = {
       callToAction: {
         target: '_blank',
         text: 'Get started',
-        href: '#',
+        href: 'https://cihelpdesk.freshdesk.com/#elevated',
       },
       hasRibbon: true,
       ribbonTitle: 'popular',
@@ -171,7 +171,7 @@ const metadata = {
       callToAction: {
         target: '_blank',
         text: 'Get started',
-        href: '#',
+        href: 'https://cihelpdesk.freshdesk.com/#rapid-response',
       },
     },
   ]}
