--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,9 +113,9 @@ const metadata = {
         },
       ],
       callToAction: {
-        target: '_blank',
+        target: '',
         text: 'Get started',
-        href: 'https://cihelpdesk.freshdesk.com/#esssentials',
+        href: '/contact?ref=essentials',
       },
     },
     {
@@ -144,7 +144,7 @@ const metadata = {
       callToAction: {
         target: '_blank',
         text: 'Get started',
-        href: 'https://cihelpdesk.freshdesk.com/#elevated',
+        href: '/contact?ref=elevated',
       },
       hasRibbon: true,
       ribbonTitle: 'popular',
@@ -171,7 +171,7 @@ const metadata = {
       callToAction: {
         target: '_blank',
         text: 'Get started',
-        href: 'https://cihelpdesk.freshdesk.com/#rapid-response',
+        href: '/contact?ref=rapid-response',
       },
     },
   ]}
