--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -1,5 +1,5 @@
 ---
-import FormContainer from '~/components/ui/NetForm.astro';
+import ContactFormStatic from '~/components/ui/NetForm.astro';
 import Headline from '~/components/ui/Headline.astro';
 import WidgetWrapper from '~/components/ui/WidgetWrapper.astro';
 import type { Contact } from '~/types';
@@ -9,11 +9,6 @@ const {
   subtitle = await Astro.slots.render('subtitle'),
   tagline = await Astro.slots.render('tagline'),
   inputs,
-  textarea,
-  disclaimer,
-  button,
-  description,
-  name,
   id,
   isDark = false,
   classes = {},
@@ -26,14 +21,7 @@ const {
   {
     inputs && (
       <div class="flex flex-col max-w-xl mx-auto rounded-lg backdrop-blur border border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 shadow p-4 sm:p-6 lg:p-8 w-full">
-        <FormContainer
-          name={name}
-          inputs={inputs}
-          textarea={textarea}
-          disclaimer={disclaimer}
-          button={button}
-          description={description}
-        />
+        <ContactFormStatic />
       </div>
     )
   }
