--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '~/layouts/PageLayout.astro';
-import HeroText from '~/components/widgets/HeroText.astro';
-import ContactUs from '~/components/widgets/Contact.astro';
+import ContactFormStatic from '~/components/ui/NetForm.astro';
 import Features2 from '~/components/widgets/Features2.astro';
-
+import HeroText from '~/components/widgets/HeroText.astro'
 const metadata = {
   title: 'Contact',
 }
@@ -12,35 +11,9 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-  <!-- <HeroText tagline="Contact" title="Let's Connect!" /> -->
+  <HeroText tagline="Let's Connect" title="Contact Us!" />
+  <ContactFormStatic />
 
-  <ContactUs
-    name = "contact"
-    title="We can't wait to get started!"
-    subtitle="Drop a message below and let us know how we can help"
-    inputs={[
-      {
-        type: 'text',
-        inputType: 'text',
-        name: 'name',
-        label: 'Name',
-      },
-      {
-        type: 'email',
-        name: 'email',
-        label: 'Email',
-      },
-      {
-        type: 'text',
-        name: 'number',
-        label: 'Phone Number',
-      },
-    ]}
-    textarea={{
-      label: 'Message',
-    }}
-    description="Our team typically responds within 24 hours."
-  />
 
   <Features2
     title="We are here to help!"
@@ -75,6 +48,5 @@ const metadata = {
       //   description: 'Serving Central Illinois',
       //   icon: 'tabler:map-pin',
       // },
-    ]}
-  />
+    ]}  />
 </Layout>
