--- a/src/components/ui/NetForm.astro
+++ b/src/components/ui/NetForm.astro
@@ -3,7 +3,7 @@ import Button from '~/components/ui/Button.astro'
 
 ---
 <div class="flex flex-col max-w-[40rem] mx-auto border rounded-xs border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 shadow p-2 sm:p-3 lg:p-6 w-full">
-  <form netlify netlify-honeypot name="ContactUs" method="POST" action="/">
+  <form netlify netlify-honeypot name="ContactUs" method="POST" action="/success">
     <p class="hidden"><label>Don’t fill this out if you’re human: <input name="bot-field" /></label></p>
     <input type="hidden" name="form-name" value="feedback" />
     <input type="hidden" name="referer" value = "" id="referrer" />
@@ -47,9 +47,10 @@ import Button from '~/components/ui/Button.astro'
       <textarea rows="4" name="comment" id="comment" class="block w-full rounded-md border-0 py-1.5 px-4 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm sm:leading-6" placeholder="Let us know how we can help you out"></textarea>
       </div>
     </div>
-    <Button variant="primary" type="submit">Contact Us</Button>
+    <button type="submit" class="btn-primary px-20 rounded-md">Submit</button>
   </form>
-  
+
+
 </div>
 <div class="mt-3 text-center">
   <p class="text-sm text-gray-600 dark:text-gray-400">Our team typically responds within 24 hours.</p>
