updated contact/submit ticket

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const metadata = {
         target: '',
         icon: 'line-md:chevron-double-down',
       },
-      { text: 'Submit a Ticket', href: 'https://cihelpdesk.freshdesk.com/' },
+      { text: 'Submit a Ticket', href: '/contact' },
     ]}
     image={{ src: '~/assets/images/worker.svg', alt: 'Central Illinois Helpdesk', type: 'svg', width: '800px', height: '600px'}}>
     <Fragment slot="title">
@@ -320,8 +320,8 @@ const metadata = {
       {
         variant: 'primary',
         text: 'Submit your first ticket today',
-        href: 'https://cihelpdesk.freshdesk.com/',
-        target: '_blank',
+        href: '/contact',
+        // target: '_blank',
         icon: 'line-md:clipboard-to-clipboard-check-transition',
       },
     ]}>
