updates, content, and hopefully some fun config things that are working correctly now.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const metadata = {
         target: '',
         icon: 'line-md:chevron-double-down',
       },
-      { text: 'Submit a Ticket', href: '/contact' },
+      { text: 'Knowledge Base', href: '/knowledgebase' },
     ]}
     image={{ src: '~/assets/images/worker.svg', alt: 'Central Illinois Helpdesk', type: 'svg', width: '800px', height: '600px'}}>
     <Fragment slot="title">
