--- a/src/components/ui/NetForm.astro
+++ b/src/components/ui/NetForm.astro
@@ -1,39 +1,47 @@
 ---
 import Button from '~/components/ui/Button.astro'
-
+import Label from '~/components/ui/contactForm/Label.astro'
+import Input from '~/components/ui/contactForm/Input.astro'
 ---
 <div class="flex flex-col max-w-[40rem] mx-auto border rounded-xs border-gray-200 dark:border-gray-700 bg-white dark:bg-slate-900 shadow p-2 sm:p-3 lg:p-6 w-full">
-  <form netlify netlify-honeypot name="ContactUs" method="POST" action="/success">
-    <p class="hidden"><label>Don’t fill this out if you’re human: <input name="bot-field" /></label></p>
-    <input type="hidden" name="form-name" value="feedback" />
-    <input type="hidden" name="referer" value = "" id="referrer" />
+  <form 
+    netlify 
+    netlify-honeypot 
+    name="ContactUs" 
+    method="POST" 
+    action="/success"
+  >
+    <p class="hidden">
+      <label>Don’t fill this out if you’re human: <input name="bot-field" /></label>
+    </p>
+    <Input type="hidden" name="form-name" value="ContactUs" />
+    <Input type="hidden" name="referer" value="website" id="referrer" />
+    
     <div class="mb-3 relative rounded-md shadow-sm">
-      <label for="name" class="absolute z-10 -top-2  left-4 inline-block bg-white px-1 text-xs font-light text-gray-900">Name</label>
+      <Label htmlFor="name">Name</Label>
       <div class="relative flex flex-grow items-stretch">
         <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
           <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
             <path d="M7 8a3 3 0 100-6 3 3 0 000 6zM14.5 9a2.5 2.5 0 100-5 2.5 2.5 0 000 5zM1.615 16.428a1.224 1.224 0 01-.569-1.175 6.002 6.002 0 0111.908 0c.058.467-.172.92-.57 1.174A9.953 9.953 0 017 18a9.953 9.953 0 01-5.385-1.572zM14.5 16h-.106c.07-.297.088-.611.048-.933a7.47 7.47 0 00-1.588-3.755 4.502 4.502 0 015.874 2.636.818.818 0 01-.36.98A7.465 7.465 0 0114.5 16z" />
           </svg>
         </div>
-        <input type="text" name="name" id="name" class="block w-full rounded-none rounded-l-md border-0 py-1.5 pl-10 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Your Name">
+        <Input type="text" name="name" id="name" placeholder="Your Name" />
       </div>
     </div>
     <div class="mb-3 relative rounded-md shadow-sm">
-      <label for="email" class="absolute z-10 -top-2 left-4 inline-block bg-white px-1 text-xs font-light text-gray-900">Email</label>
+      <Label htmlFor="email">Email</Label>
       <div class="pointer-events-none absolute inset-y-0 left-0 flex items-center pl-3">
         <svg class="h-5 w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path d="M3 4a2 2 0 00-2 2v1.161l8.441 4.221a1.25 1.25 0 001.118 0L19 7.162V6a2 2 0 00-2-2H3z" />
           <path d="M19 8.839l-7.77 3.885a2.75 2.75 0 01-2.46 0L1 8.839V14a2 2 0 002 2h14a2 2 0 002-2V8.839z" />
         </svg>
       </div>
-      <input type="email" name="email" id="email" class="block w-full rounded-md border-0 py-1.5 pl-10 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm sm:leading-6" placeholder="you@example.com">
+      <Input type="email" name="email" id="email" placeholder="you@example.com" />
     </div>
     <div class="mb-3 relative rounded-md shadow-sm">
-      <label for="phone" class="absolute z-10 -top-2 left-4 inline-block bg-white px-1 text-xs font-light text-gray-900">Phone Number</label>
+      <Label htmlFor="phone">Phone Number</Label>
       <div class="absolute inset-y-0 left-0 flex items-center">
-        <label for="country" class="sr-only">
-          Country
-        </label>
+        <label for="country" class="sr-only">Country</label>
         <select id="country" name="country" autocomplete="country" class="h-full rounded-sm border-0 bg-transparent py-0 pl-3 pr-2 text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-orange-600 sm:text-sm">
           <option>US</option>
           <option>CA</option>
